--- a/02-CSS/homework/responsive-web/less/navigation.less
+++ b/02-CSS/homework/responsive-web/less/navigation.less
@@ -1,1 +1,21 @@
 // Código de Nav acá
+nav{
+
+    .flex(column, center, center);
+    padding: 10px;
+    background-color: @nav-bg;
+    
+    h1 {
+        font-size: 35px;
+    }
+
+    ul{
+        .flex(row, space-around, center)
+        
+    }
+    a{
+        text-decoration: none;
+        color: @nav-font;
+        font-weight: bold;
+    }
+}
