--- a/02-CSS/homework/responsive-web/less/home-page.less
+++ b/02-CSS/homework/responsive-web/less/home-page.less
@@ -3,8 +3,11 @@
 .home {
 
   .intro {
+    img{
+      border-radius: 25%;
+    }
 
-    h2 {
+    h1 {
       padding: 15px;
     }
 
@@ -58,6 +61,7 @@
       }
 
       .btn {
+        .btn-henry(@btn-bg-color, red);
       }
     }
 
