--- a/09-React-Routing/homework/src/containers/App.css
+++ b/09-React-Routing/homework/src/containers/App.css
@@ -6,3 +6,8 @@
   display: flex;
   justify-content: center;
 }
+
+body {
+  background:url(../img/cieloclima.jpg) no-repeat center center fixed ;
+  background-size: cover;
+}
