--- a/09-React-Routing/homework/src/components/Card.css
+++ b/09-React-Routing/homework/src/components/Card.css
@@ -1,13 +1,20 @@
 .card {
   margin: 20px;
   width: 17rem;
-  background-color:#808B96;
-  border-radius: 20px;
-  box-shadow: 3px 5px 5px rgba(3, 32, 51, 8) ;
+  background:#ffffff;
+  border-radius: 15px;
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 20px 20px 50px rgba(3, 6, 3, 0.5);
+  /* backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px); */
+  background-color:rgba(255, 255, 255, 0.3);
+  
 }
 
 .card:hover {
   transform: scale(1.05);
+  text-decoration: none;
 }
 
 .card-title {
