--- a/09-React-Routing/homework/src/components/Card/Card.css
+++ b/09-React-Routing/homework/src/components/Card/Card.css
@@ -8,8 +8,6 @@
   border-left: 1px solid rgba(255, 255, 255, 0.5);
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   box-shadow: 20px 20px 50px rgba(3, 6, 3, 0.5);
-  /* backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px); */
   background-color:rgba(255, 255, 255, 0.3);
   
 }
@@ -26,8 +24,6 @@
   font-family: 'DM Serif Display', serif;
   font-weight: bolder;
   color: #0c2461;
-
-
 }
 
 #closeIcon {
@@ -40,12 +36,16 @@
 .card-body {
   margin-top: 0px !important;
   padding-top: 0px !important;
+
 }
 
 .btn-danger {
   border-radius: 6px;
 }
 
-.iconoClima {
- margin-right: 120px;
+.row {
+  margin-right: 10px;
+  margin-bottom: 5px;
+  justify-content:space-evenly;
 }
+
