--- a/09-React-Routing/homework/src/components/Nav/Nav.css
+++ b/09-React-Routing/homework/src/components/Nav/Nav.css
@@ -1,4 +1,18 @@
-#logoHenry {
-  margin-right: 20px;
-  width: 35px;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
+}
+
+ #logoClima {
+  margin-right: 5%;
+
+}
+
+.letra {
+  font-family: sans-serif;
+  color: white;
+  font-style: initial;
+  margin-right: 10px;
+  
 }
