--- a/09-React-Routing/homework/src/components/SearchBarr/SearchBar.css
+++ b/09-React-Routing/homework/src/components/SearchBarr/SearchBar.css
@@ -45,7 +45,7 @@
 .search-text {
     border: none;
     background: none;
-    outline: none;
+    /* outline: none; */
     float: left;
     padding: 0;
     color: black;
